--- a/vim_config.json
+++ b/vim_config.json
@@ -22,12 +22,11 @@
             {
                 "name": "brew",
                 "recipe": {
-                    "all": [],
                     "darwin": [
                         "ruby -e \"$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)\""
-                    ]
+                    ],
+                    "linux": []
                 }
-
             },
             {
                 "name": "python",
@@ -43,28 +42,8 @@
             "pkg-url": "https://github.com/tpope/vim-pathogen.git",
             "recipe": {
                 "all": [
-                    "mkdir -p ~/.vim/autoload ~/.vim/bundle",
+                    "mkdir -p ~/.vim/autoload",
                     "curl -LSso ~/.vim/autoload/pathogen.vim https://tpo.pe/pathogen.vim"
-                ]
-            }
-        },
-        {
-            "depends-on": [],
-            "name": "colors",
-            "pkg-url": "https://github.com/flazz/vim-colorschemes.git",
-            "recipe": {
-                "all": [
-                    "mv colors ~/.vim"
-                ]
-            }
-        },
-        {
-            "depends-on": [],
-            "name": "fonts",
-            "pkg-url": "https://github.com/powerline/fonts.git",
-            "recipe": {
-                "all": [
-                    "./install.sh"
                 ]
             }
         },
@@ -74,15 +53,19 @@
                     "name": "ctags",
                     "recipe": {
                         "darwin": [
-                            "curl -LSso /usr/local/Library/Formula/ctags-better-php.rb https://raw.githubusercontent.com/shawncplus/phpcomplete.vim/master/misc/ctags-better-php.rb",
-                            "brew install ctags-better-php",
-                            "brew link --overwrite ctags-better-php"
+                            "curl -LSso ctags-5.8.tar.gz 'http://sourceforge.net/projects/ctags/files/ctags/5.8/ctags-5.8.tar.gz/download?use_mirror=iweb'",
+                            "tar xzf ctags-5.8.tar.gz",
+                            "cd ctags-5.8",
+                            "sudo ./configure",
+                            "sudo make",
+                            "sudo make install"
                         ],
                         "linux": [
-                            "curl -LSso ctags-5.8_better_php_parser.tar.gz https://github.com/shawncplus/phpcomplete.vim/raw/master/misc/ctags-5.8_better_php_parser.tar.gz",
-                            "tar xvf ctags-5.8_better_php_parser.tar.gz",
+                            "curl -LSso ctags-5.8.tar.gz 'http://sourceforge.net/projects/ctags/files/ctags/5.8/ctags-5.8.tar.gz/download?use_mirror=iweb'",
+                            "tar xzf ctags-5.8.tar.gz",
+                            "cd ctags-5.8",
                             "sudo ./configure",
-                            "make",
+                            "sudo make",
                             "sudo make install"
                         ]
                     }
@@ -93,183 +76,6 @@
             "recipe": {}
         },
         {
-            "depends-on": [
-                {
-                    "name": "libncurses5-dev",
-                    "recipe": {
-                        "all": [],
-                        "linux": [
-                            "sudo apt-get install -y libncurses5-dev"
-                        ]
-                    }
-                },
-                {
-                    "name": "cscope",
-                    "recipe": {
-                        "darwin": [
-                            "curl -LSso cscope-15.8b.tar.gz http://sourceforge.net/projects/cscope/files/latest/download?source=files",
-                            "tar xzf cscope-15.8b.tar.gz",
-                            "cd cscope-15.8b",
-                            "sudo ./configure",
-                            "make",
-                            "sudo make install"
-                        ],
-                        "linux": [
-                            "curl -LSso cscope-15.8b.tar.gz http://sourceforge.net/projects/cscope/files/latest/download?source=files",
-                            "tar xzf cscope-15.8b.tar.gz",
-                            "cd cscope-15.8b",
-                            "sudo ./configure",
-                            "make",
-                            "sudo make install"
-                        ]
-                    }
-                }
-            ],
-            "name": "cscope.vim",
-            "pkg-url": "https://github.com/brookhong/cscope.vim.git",
-            "recipe": {}
-        },
-        {
-            "depends-on": [
-                {
-                    "name": "brew",
-                    "recipe": {
-                        "all": [],
-                        "darwin": [
-                            "ruby -e \"$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)\""
-                        ]
-                    }
-                },
-                {
-                    "name": "cmake",
-                    "recipe": {
-                        "darwin": [
-                            "brew install cmake"
-                        ],
-                        "linux": [
-                            "sudo apt-get install -y cmake"
-                        ]
-                    }
-                },
-                {
-                    "name": "python-dev",
-                    "recipe": {
-                        "darwin": [],
-                        "linux": [
-                            "sudo apt-get install -y python-dev"
-                        ]
-                    }
-                },
-                {
-                    "name": "build-essential",
-                    "recipe": {
-                        "darwin": [],
-                        "linux": [
-                            "sudo apt-get install -y build-essential"
-                        ]
-                    }
-                }
-            ],
-            "name": "YouCompleteMe",
-            "pkg-url": "https://github.com/Valloric/YouCompleteMe.git",
-            "recipe": {
-                "all": [
-                    "git submodule update --init --recursive",
-                    "./install.sh --clang-completer"
-                ]
-            }
-        },
-        {
-            "depends-on": [
-                {
-                    "name": "php",
-                    "recipe": {
-                        "linux": [
-                            "sudo apt-get install -y php5"
-                        ]
-                    }
-                }
-            ],
-            "name": "tagbar-phpctags.vim",
-            "pkg-url": "https://github.com/vim-php/tagbar-phpctags.vim.git",
-            "recipe": {
-                "all": [
-                    "make"
-                ]
-            }
-        },
-        {
-            "depends-on": [],
-            "name": "vimproc.vim",
-            "pkg-url": "https://github.com/Shougo/vimproc.vim.git",
-            "recipe": {
-                "all": [
-                    "make"
-                ]
-            }
-        },
-        {
-            "depends-on": [
-                {
-                    "name": "node",
-                    "recipe": {
-                        "darwin": [
-                            "brew install node"
-                        ],
-                        "linux": [
-                            "sudo apt-get install -y node npm"
-                        ]
-                    }
-                }
-            ],
-            "name": "jsctags",
-            "pkg-url": "",
-            "recipe": {
-                "darwin": [
-                    "sudo npm install -g git+https://github.com/ramitos/jsctags.git"
-                ],
-                "linux": [
-                    "sudo npm install -g git+https://github.com/ramitos/jsctags.git"
-                ]
-            }
-        },
-        {
-            "depends-on": [],
-            "name": "PreserveNoEOL",
-            "pkg-url": "https://github.com/vim-scripts/PreserveNoEOL.git",
-            "recipe": {}
-        },
-        {
-            "depends-on": [],
-            "name": "QFEnter",
-            "pkg-url": "https://github.com/yssl/QFEnter.git",
-            "recipe": {}
-        },
-        {
-            "depends-on": [],
-            "name": "auto-pairs",
-            "pkg-url": "https://github.com/jiangmiao/auto-pairs.git",
-            "recipe": {}
-        },
-        {
-            "depends-on": [],
-            "name": "ctrlp.vim",
-            "pkg-url": "https://github.com/kien/ctrlp.vim.git",
-            "recipe": {}
-        },
-        {
-            "depends-on": [],
-            "name": "emmet-vim",
-            "pkg-url": "https://github.com/mattn/emmet-vim.git",
-            "recipe": {}
-        },
-        {
-            "depends-on": [],
-            "name": "nerdcommenter",
-            "pkg-url": "https://github.com/scrooloose/nerdcommenter.git",
-            "recipe": {}
-        },
-        {
             "depends-on": [],
             "name": "nerdtree",
             "pkg-url": "https://github.com/scrooloose/nerdtree.git",
@@ -277,256 +83,8 @@
         },
         {
             "depends-on": [],
-            "name": "phpcomplete.vim",
-            "pkg-url": "https://github.com/shawncplus/phpcomplete.vim.git",
-            "recipe": {}
-        },
-        {
-            "depends-on": [],
-            "name": "supertab",
-            "pkg-url": "https://github.com/ervandew/supertab.git",
-            "recipe": {}
-        },
-        {
-            "depends-on": [],
-            "name": "syntastic",
-            "pkg-url": "https://github.com/scrooloose/syntastic.git",
-            "recipe": {}
-        },
-        {
-            "depends-on": [],
-            "name": "tlib_vim",
-            "pkg-url": "https://github.com/tomtom/tlib_vim.git",
-            "recipe": {}
-        },
-        {
-            "depends-on": [],
-            "name": "vdebug",
-            "pkg-url": "https://github.com/joonty/vdebug.git",
-            "recipe": {}
-        },
-        {
-            "depends-on": [],
-            "name": "vim-addon-mw-utils",
-            "pkg-url": "https://github.com/MarcWeber/vim-addon-mw-utils.git",
-            "recipe": {}
-        },
-        {
-            "depends-on": [],
-            "name": "vim-airline",
-            "pkg-url": "https://github.com/bling/vim-airline.git",
-            "recipe": {}
-        },
-        {
-            "depends-on": [],
-            "name": "vim-bbye",
-            "pkg-url": "https://github.com/moll/vim-bbye.git",
-            "recipe": {}
-        },
-        {
-            "depends-on": [],
-            "name": "vim-better-whitespace",
-            "pkg-url": "https://github.com/ntpeters/vim-better-whitespace.git",
-            "recipe": {}
-        },
-        {
-            "depends-on": [],
-            "name": "vim-easymotion",
-            "pkg-url": "https://github.com/easymotion/vim-easymotion.git",
-            "recipe": {}
-        },
-        {
-            "depends-on": [],
-            "name": "vim-fugitive",
-            "pkg-url": "https://github.com/tpope/vim-fugitive.git",
-            "recipe": {}
-        },
-        {
-            "depends-on": [],
-            "name": "vim-gitgutter",
-            "pkg-url": "https://github.com/airblade/vim-gitgutter.git",
-            "recipe": {}
-        },
-        {
-            "depends-on": [],
-            "name": "vim-ragtag",
-            "pkg-url": "https://github.com/tpope/vim-ragtag.git",
-            "recipe": {}
-        },
-        {
-            "depends-on": [],
-            "name": "vim-surround",
-            "pkg-url": "https://github.com/tpope/vim-surround.git",
-            "recipe": {}
-        },
-        {
-            "depends-on": [],
-            "name": "vim-togglelist",
-            "pkg-url": "https://github.com/milkypostman/vim-togglelist.git",
-            "recipe": {}
-        },
-        {
-            "depends-on": [],
-            "name": "CSApprox",
-            "pkg-url": "",
-            "recipe": {
-                "all": [
-                    "curl -LSso ~/csapprox.zip http://www.vim.org/scripts/download_script.php?src_id=18594",
-                    "mkdir ~/.vim/bundle/CSApprox",
-                    "mv ~/csapprox.zip ~/.vim/bundle/CSApprox",
-                    "cd ~/.vim/bundle/CSApprox",
-                    "unzip csapprox.zip",
-                    "rm csapprox.zip"
-                ]
-            }
-        },
-        {
-            "depends-on": [],
-            "name": "gundo.vim",
-            "pkg-url": "https://github.com/sjl/gundo.vim.git",
-            "recipe": {}
-        },
-        {
-            "depends-on": [],
-            "name": "MatchTagAlways",
-            "pkg-url": "https://github.com/Valloric/MatchTagAlways.git",
-            "recipe": {}
-        },
-        {
-            "depends-on": [],
-            "name": "vim-matchit",
-            "pkg-url": "https://github.com/edsono/vim-matchit.git",
-            "recipe": {}
-        },
-        {
-            "depends-on": [],
-            "name": "vim-repeat",
-            "pkg-url": "https://github.com/tpope/vim-repeat.git",
-            "recipe": {}
-        },
-        {
-            "depends-on": [
-                {
-                    "name": "brew",
-                    "recipe": {
-                        "all": [],
-                        "darwin": [
-                            "ruby -e \"$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)\""
-                        ]
-                    }
-                },
-                {
-                    "name": "node",
-                    "recipe": {
-                        "darwin": [
-                            "brew install node"
-                        ],
-                        "linux": [
-                            "sudo apt-get install -y node npm"
-                        ]
-                    }
-                }
-            ],
-            "name": "tern_for_vim",
-            "pkg-url": "https://github.com/marijnh/tern_for_vim.git",
-            "recipe": {
-                "all": [
-                    "npm install"
-                ]
-            }
-        },
-        {
-            "depends-on": [],
-            "name": "jedi-vim",
-            "pkg-url": "https://github.com/davidhalter/jedi-vim.git",
-            "recipe": {
-                "all": [
-                    "git submodule update --init --recursive"
-                ]
-            }
-        },
-        {
-            "depends-on": [],
-            "name": "ultisnips",
-            "pkg-url": "https://github.com/SirVer/ultisnips.git",
-            "recipe": {}
-        },
-        {
-            "depends-on": [],
-            "name": "vim-snippets",
-            "pkg-url": "https://github.com/honza/vim-snippets.git",
-            "recipe": {}
-        },
-        {
-            "depends-on": [],
-            "name": "BufOnly.vim",
-            "pkg-url": "https://github.com/vim-scripts/BufOnly.vim.git",
-            "recipe": {}
-        },
-        {
-            "depends-on": [],
-            "name": "vim-multiple-cursors",
-            "pkg-url": "https://github.com/terryma/vim-multiple-cursors.git",
-            "recipe": {}
-        },
-        {
-            "depends-on": [],
-            "name": "vim-signature",
-            "pkg-url": "https://github.com/kshenoy/vim-signature.git",
-            "recipe": {}
-        },
-        {
-            "depends-on": [],
-            "name": "vim-airline-themes",
-            "pkg-url": "https://github.com/vim-airline/vim-airline-themes.git",
-            "recipe": {}
-        },
-        {
-            "depends-on": [],
-            "name": "vim-javascript",
-            "pkg-url": "git@github.com:pangloss/vim-javascript.git",
-            "recipe": {}
-        },
-        {
-            "depends-on": [],
-            "name": "vim-node",
-            "pkg-url": "git@github.com:moll/vim-node.git",
-            "recipe": {}
-        },
-        {
-            "depends-on": [],
-            "name": "javascript-libraries-syntax.vim",
-            "pkg-url": "git@github.com:othree/javascript-libraries-syntax.vim.git",
-            "recipe": {}
-        },
-        {
-            "depends-on": [],
-            "name": "neomake",
-            "pkg-url": "git@github.com:benekastah/neomake.git",
-            "recipe": {}
-        },
-        {
-            "depends-on": [],
-            "name": "vim-nodejs-complete",
-            "pkg-url": "git@github.com:myhere/vim-nodejs-complete.git",
-            "recipe": {}
-        },
-        {
-            "depends-on": [],
-            "name": "vim-jsdoc",
-            "pkg-url": "git@github.com:heavenshell/vim-jsdoc.git",
-            "recipe": {}
-        },
-        {
-            "depends-on": [],
-            "name": "vim-minimap",
-            "pkg-url": "git@github.com:severin-lemaignan/vim-minimap.git",
-            "recipe": {}
-        },
-        {
-            "depends-on": [],
-            "name": "vim-jsx",
-            "pkg-url": "https://github.com/mxw/vim-jsx.git",
+            "name": "vim-powerline",
+            "pkg-url": "https://github.com/Lokaltog/vim-powerline.git",
             "recipe": {}
         }
     ]
